--- a/.github/workflows/wiki-build-workflow.yml
+++ b/.github/workflows/wiki-build-workflow.yml
@@ -31,9 +31,11 @@ jobs:
     - name: build wiki 
       run: yarn run build
 
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4.4.3
+    - name: setup aliyun oss
+      uses: manyuanrong/setup-ossutil@master
       with:
-        branch: wiki-build
-        folder: build
-  
+        endpoint: oss-cn-shenzhen.aliyuncs.com
+        access-key-id: ${{ secrets.OSS_KEY_ID }}
+        access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
+    - name: cp files to aliyun
+      run: ossutil cp -rf ./build oss://btt-wiki/
