--- a/.github/workflows/wiki-PR-build-workflow.yml
+++ b/.github/workflows/wiki-PR-build-workflow.yml
@@ -8,12 +8,13 @@ on:
 
 jobs:
   build:
-
+    name: Build wiki
+    
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [24.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -21,7 +22,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: '24.x'
         
       # init yarn 
     - name: Install dependencies
