action: Add conditional check for specific repository

--- a/.github/workflows/wiki-build-workflow.yml
+++ b/.github/workflows/wiki-build-workflow.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     name: Build wiki
+    if: github.repository == 'bigtreetech-beta/bigtreetech-wiki-neo'
     
     runs-on: ubuntu-latest
 
