--- a/.github/workflows/wiki-build-workflow.yml
+++ b/.github/workflows/wiki-build-workflow.yml
@@ -1,5 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# wiki build and deploy 
 
 name: wiki-build-workflow
 
@@ -13,20 +12,18 @@ jobs:
     if: github.repository == 'bigtreetech-beta/bigtreetech-wiki-neo'
     
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [24.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js
+    
+    - name: Setup Environment
       uses: actions/setup-node@v4
       with:
         node-version: '24.x'
+        cache: yarn
+        
     - name: Install dependencies
-      run: yarn
+      run: yarn install
       
     - name: build wiki 
       run: yarn run build
