--- a/.github/workflows/wiki-build-workflow.yml
+++ b/.github/workflows/wiki-build-workflow.yml
@@ -27,6 +27,16 @@ jobs:
     - name: build wiki 
       run: yarn run build
 
+    - name: upload to cloudflare r2
+      uses: ryand56/r2-upload-action@latest
+      with:
+        r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
+        r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+        r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+        r2-bucket: ${{ secrets.R2_BUCKET }}
+        source-dir: build
+        destination-dir: ./
+
     - name: setup aliyun oss
       uses: manyuanrong/setup-ossutil@master
       with:
